app/assets/stylesheets/moraga.scss
@import "bootstrap/mixins";

html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by 2 times the footer height */
  margin-bottom: 60px;
  /* Margin bottom by navbar height */
  padding-top: 60px;
}

#content {
  padding-bottom: 60px;
}

#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: #f5f5f5;
  .container {
    padding: 15px;
  }
}

.nav-tabs {
  margin-bottom: 15px;
}

.img-center {
  margin: 0 auto;
}

/* centered columns styles */
.row-centered {
  text-align:center;
}
.col-centered {
  display:inline-block;
  float:none;
  /* reset the text-align */
  text-align:left;
  /* inline-block space fix */
  margin-right:-4px;
}

.col-top {
  vertical-align:top;
}

fieldset {
  margin: 20px 0 20px 0;
}

.bootstrap-switch {
  height: 1.7em
}

.comment-reply{
  padding-top: 40px;
}

p.comment-body {
  padding-top: 20px;
}

.well.comment-section {
  padding-bottom: 40px;
}

#account-already {
  font-size: 0.6em;
}

/* comments views pane: use padding-bottom before next comment box */
.panel.panel-default .panel-body .notifications {
  padding-bottom: 20px;
}

/* comments views pane: use padding-bottom after each comment */
.panel.panel-default .panel-body .notifications p {
  padding-bottom: 20px;
}

#proposal-info div dt, #proposal-info div dd {
  display: inline-block;
}

.changeset{
  display: none;
}

.box{
  height: 230px;
}

/* sidebar hamburger btn */
.side-nav-btn{
 margin-left: 10px;
 float: left;
 }

.qr-image{
  margin-left: 120px;
}

.g-recaptcha {
    @include clearfix;
    padding-bottom: 12px;

    div {
        float: right;
    }
}

/* omniauth btn grp */
#openid-btn-grp{
  display: flex;
  justify-content: center;
}

.word_break {
  word-wrap: break-word;
}

